--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,11 @@
     <string name="ambalance">الطوارئ</string>
     <string name="traffic">ادارة السير</string>
     <string name="fireMan">الدفاع المدني</string>
+    <string name="text_about">
+        \nتطبيق يساعدك على الاتصال مع الجهات المعنية باسرع وقت ممكن من خلال ارسال معلوماتك كرقم هاتفك و الموقع الجغرافي الخاص بك لاقرب موقع مختص بحالتك عند مواجهة الاخطار كالحريق و الحوادث السير و المشاجرات...\n
+
+       \n يوفر لك التطبيق التواصل السريع مع الجهات المختصة كالدفاع المدني و الامن العام و ادارة السير و الطوارئ..\n
+    </string>
 
 
 </resources>
